# DL_basics

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  attention.cpp  autodiff.cpp  autodiff.h  compile_commands.json  main.cpp  ops.cpp  scalar_autodiff  scalar_autodiff.cpp  scalar_autodiff.sync-conflict-20240710-215620-INXNTVV.cpp  test_boost.cpp  test_boost.cpp.olde  utils.cpp
scalar_autodiff.dSYM/Contents/: Info.plist
scalar_autodiff.dSYM/Contents/Resources/DWARF/: scalar_autodiff
scalar_autodiff.dSYM/Contents/Resources/Relocations/x86_64/: scalar_autodiff.yml
scalar_autodiff.out.dSYM/Contents/: Info.plist
scalar_autodiff.out.dSYM/Contents/Resources/Relocations/x86_64/: scalar_autodiff.out.yml
tests/: compile_commands.sh  test_ops.cpp  test_tensor.cpp  tests.cpp
